# orphanet-koza-transform

./: README.md  download.yaml  post-process.sh  pyproject.toml
transform/orphanet/: gene_to_disease.py  gene_to_disease.yaml
